@@ -6,8 +6,8 @@ ExultStudio creates most of the .dat files now, but it (or other tools) still
 need to create the following in 'static':
 
 FACES.VGA     GUMPS.VGA     PAPERDOL.VGA  SHAPES.VGA    XFORM.TBL
-FONT0000.VGA  MAINSHP.FLX   POINTERS.SHP  SPRITES.VGA
-FONTS.VGA     PALETTES.FLX  SCHEDULE.DAT  TEXT.FLX 
+FONT0000.VGA  POINTERS.SHP  SPRITES.VGA
+FONTS.VGA     TEXT.FLX 
 
 ===========================
 This is a braindump of what I want to do with ExultStudio.
